# netc

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: netc.h  netconly.h
include/ncsrc/: posix_src.h  raw_src.h  tls_src.h  win_src.h
src/: netc.c  posix.c  tls.c
src/raw/: internalraw.h  posix.c  raw.c
src/ssl/: openssl.c
unittests/: Makefile  connect.c  connectudp.c  dlt.cpp  echo_server.py  echo_sslserver.py  massconnect.c  poll.c  rw.c  rw.ci  server.c  serverudp.c  test_echo_server.py
unittests/certs/: server.crt  server.key
unittests/raw/: Makefile  connect.c  connect.ci  hostname.c  hostname.ci  rw.c  rw.ci
unittests/server/: echo_sslserver.py
unittests/tls/: Makefile  connect.c  connect.ci  hostname.c  hostname.ci  hostnamerw.c  hostnamerw.ci  rw.c  rw.ci
unittests/wrapper/: Makefile  connect.c  connect.ci  rw.c  rw.ci
